--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </body>
 <head>
 <button type="button" onclick="get()">get</button>
-<p id="op">jebf</p>
+<p id="eventName">efe</p>
+<p id="eventid">ere</p>
 <script src="main.js" type="text/javascript">
 </script>
 </head>
