--- a/index.html
+++ b/index.html
@@ -2,15 +2,63 @@
 <head>
  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
- </script> 
+ </script>
+ <link rel="stylesheet" type="text/css" href="style.css"></link> 
+ <Title>ContestTracker</Title>
 </head>
 <body>
-</body>
-<head>
-<button type="button" onclick="get()">get</button>
-<p id="eventName">efe</p>
-<p id="eventid">ere</p>
+    <footer class="footer">
+       <div class="heading">ContestTracker</div>
+       <br><br>
+    </footer>
+<center>
+    <table>
+        <tr>
+            <td class="label">Select Platform</td>
+            <td>&nbsp;&nbsp;</td>
+            <td class="label">Select Time Slot</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>
+                <label for="contest">
+                    <select id="contest" class="select">
+                        <option value="All">All of the listed</option>
+                        <option value="codeforces">Codeforces</option>
+                        <option value="codeforces_gym">codechef</option>
+                        <option value="top_coder">TopCoder</option>
+                        <option value="at_coder">AtCoder</option>
+                        <option value="code_chef">Codechef</option>
+                        <option value="cs_academy">CS Academy</option>
+                        <option value="hacker_rank">Hackerrank</option>
+                        <option value="hacker_earth">Hackerearth</option>
+                        <option value="cs_academy">CS Academy</option>
+                        <option value="kick_start">Google KickStart</option>
+                        <option value="leet_code">Leetcode</option>
+                    </select>
+                </label>
+            </td>
+            <td>&nbsp;&nbsp;</td>
+            <td>
+                <label for="timing">
+                    <select id="timing" class="select">
+                        <option value="CODING">Running Contests</option>
+                        <option value="BEFORE">Future Contests</option>
+                    </select>
+                </label>
+            </td>  
+        </tr>
+    </table>
+    <br><br>
+<button type="button" onclick="get()" class="button">Fetch Contests</button>
+<br><br>
+    <div id="outputStream"></div>
+</center>
 <script src="main.js" type="text/javascript">
 </script>
-</head>
+    </form>
+</body>
 </html>
