fixed header loading issues

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <center>
     <table>
         <tr>
-            <td class="label">Select Platform</td>
+            <td>Select Platform</td>
             <td>&nbsp;&nbsp;</td>
-            <td class="label">Select Time Slot</td>
+            <td>Select Time Slot</td>
         </tr>
         <tr>
             <td></td>
