--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="utf-8">
  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
  </script>
@@ -14,9 +15,9 @@
 <center>
     <table>
         <tr>
-            <td>Select Platform</td>
+            <td>&ensp; Select Platform</td>
             <td>&nbsp;&nbsp;</td>
-            <td>Select Time Slot</td>
+            <td>&ensp; Select Time Slot</td>
         </tr>
         <tr>
             <td></td>
@@ -28,16 +29,16 @@
                     <select id="contest" class="select">
                         <option value="All">All of the listed</option>
                         <option value="codeforces">Codeforces</option>
-                        <option value="codeforces_gym">codechef</option>
                         <option value="top_coder">TopCoder</option>
                         <option value="at_coder">AtCoder</option>
                         <option value="code_chef">Codechef</option>
+                        <option value="leet_code">Leetcode</option>
                         <option value="cs_academy">CS Academy</option>
                         <option value="hacker_rank">Hackerrank</option>
                         <option value="hacker_earth">Hackerearth</option>
                         <option value="cs_academy">CS Academy</option>
                         <option value="kick_start">Google KickStart</option>
-                        <option value="leet_code">Leetcode</option>
+                        <option value="codeforces_gym">Codeforces::Gym</option>
                     </select>
                 </label>
             </td>
@@ -53,7 +54,7 @@
         </tr>
     </table>
     <br><br>
-<button type="button" onclick="get()" class="button">Fetch Contests</button>
+<button type="button" onclick="loadTheData()" class="button">Fetch Contests</button>
 <br><br>
     <div id="outputStream"></div>
 </center>
